--- a/meson.build
+++ b/meson.build
@@ -4,12 +4,15 @@ project('tcc', 'cpp', 'cuda', version: '0.0.1',
 cc = meson.get_compiler('cpp')
 pkg = import('pkgconfig')
 version = '0.5'
+build_exe = false
 
 # Dependencies
 cuda_dep = dependency('cuda', version : '>=10', modules : ['cudart', 'nvrtc', 'cuda'])
 openmp_dep = dependency('openmp', required: false)
 opencl_dep = dependency('opencl', required: false)
 
+
+# Compile libtcc
 libtcc_srcs = [
     'util/cu.cc',
 	'util/nvrtc.cc',
@@ -22,13 +25,13 @@ libtcc_srcs = [
 # I don't like this, but not sure how to do this in meson 
 run_command('ld', '-r', '-b', 'binary', '-o', 'libtcc/TCCorrelator.o', 'libtcc/TCCorrelator.cu', check: true)
 
-# Compile libtcc
 lib_tcc = library('tcc', libtcc_srcs, 
               version : version, soversion : '0', 
               dependencies: cuda_dep,
               objects: 'libtcc/TCCorrelator.o'
               )
 
+# Create pkgconfig file
 pkg.generate(libraries : lib_tcc,
              subdirs : ['libtcc'],
              version : version,
@@ -36,35 +39,46 @@ pkg.generate(libraries : lib_tcc,
              filebase : 'tcc',
              description : 'Tensor core correlator for radio astronomy on NVIDIA GPUs')
 
-# Compile executable: Simple example
-executable('SimpleExample', 'test/SimpleExample/SimpleExample.cu',
-           link_with: lib_tcc, dependencies: cuda_dep)
+# Include dirs -- this is set in case TCC is used as a meson subproject
+inc_dirs = [
+    '.',
+    'util',
+    'libtcc',
+    'test/Common'
+]
+subproject_dep = declare_dependency(include_directories: inc_dirs, link_with: lib_tcc)
 
-# Compile executable: Correlator test
-if openmp_dep.found()
-    corrtest_srcs = [
-        'test/CorrelatorTest/CorrelatorTest.cc',
-        'test/CorrelatorTest/Options.cc',
-        'test/Common/Record.cc',
-        'test/Common/UnitTest.cc',
+if build_exe
+    # Compile executable: Simple example
+    executable('SimpleExample', 'test/SimpleExample/SimpleExample.cu',
+            link_with: lib_tcc, dependencies: cuda_dep)
+
+    # Compile executable: Correlator test
+    if openmp_dep.found()
+        corrtest_srcs = [
+            'test/CorrelatorTest/CorrelatorTest.cc',
+            'test/CorrelatorTest/Options.cc',
+            'test/Common/Record.cc',
+            'test/Common/UnitTest.cc',
+            ]
+        corrtest_inc = [
+            'test/Common/ComplexInt4.h', 
+            'test/Common/Record.h',
+            'test/CorrelatorTest/CorrelatorTest.h'
         ]
-    corrtest_inc = [
-        'test/Common/ComplexInt4.h', 
-        'test/Common/Record.h',
-        'test/CorrelatorTest/CorrelatorTest.h'
-    ]
 
-    executable('CorrelatorTest', corrtest_srcs,
-            link_with: lib_tcc, dependencies: [cuda_dep, openmp_dep])
-else
-    warning('OpenMP not found, CorrelatorTest will not be built.')
-endif
+        executable('CorrelatorTest', corrtest_srcs,
+                link_with: lib_tcc, dependencies: [cuda_dep, openmp_dep])
+    else
+        warning('OpenMP not found, CorrelatorTest will not be built.')
+    endif
 
-if opencl_dep.found()
-    executable('OpenCLCorrelatorTest', 'test/OpenCLCorrelatorTest/OpenCLCorrelatorTest.cc',
-           link_with: lib_tcc, 
-           include_directories: 'CL',
-           dependencies: cuda_dep)
-else
-    warning('OpenCL not found, OpenCLCorrelatorTest will not be built.')
+    if opencl_dep.found()
+        executable('OpenCLCorrelatorTest', 'test/OpenCLCorrelatorTest/OpenCLCorrelatorTest.cc',
+            link_with: lib_tcc, 
+            include_directories: 'CL',
+            dependencies: cuda_dep)
+    else
+        warning('OpenCL not found, OpenCLCorrelatorTest will not be built.')
+    endif
 endif
